--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,7 @@ git+https://github.com/jupyterhub/wrapspawner.git@5f2b7075f77d0c1c49066682a8e8ad
 jupyterhub-tmpauthenticator==0.6
 oauthenticator==0.9.0
 jupyterhub-ldapauthenticator==1.2.2
-psycopg2==2.8.4 --no-binary psycopg2
+psycopg2==2.8.4 
 openshift==0.10.0
 wrapt==1.11.2
-jupyterhub-nativeauthenticator
 
